--- a/package.json
+++ b/package.json
@@ -3,12 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
+    "react-pdf": "^9.1.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.4",
+    "react-text-loop": "^2.3.0",
+    "react-tsparticles": "^2.12.2",
+    "react-typical": "^0.1.3",
+    "react-typing-animation": "^1.6.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
